# Tide

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.valgrind
apps/: CMakeLists.txt  pyramidify  pyramidmaker  tide  tide.desktop
apps/Launcher/: CMakeLists.txt  FileInfoHelper.h  FolderModel.cpp  FolderModel.h  Launcher.cpp  Launcher.h  ModelFilter.cpp  ModelFilter.h  main.cpp  resources.qrc
apps/Launcher/qml/: Curtain.qml  CurtainDialog.qml  DefaultPanel.qml  FileBrowser.qml  FileBrowserGridItem.qml  FileBrowserGridSection.qml  FileBrowserGridView.qml  FileBrowserImage.qml  FileBrowserListItem.qml  FileBrowserListView.qml  FileBrowserViewButton.qml  LaunchMenu.qml  Menu.qml  OpenPanel.qml  OptionsPanel.qml  SavePanel.qml  ScrollBar.qml  SearchPanel.qml  main.qml  style.js
apps/LocalStreamer/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
apps/PyramidMaker/: CMakeLists.txt  main.cpp
apps/ReactWebUI/: README.md  config-overrides.js  package-lock.json  package.json
apps/ReactWebUI/backend/: start.js
apps/ReactWebUI/development_scripts/: DEV.md  start.js  wall-0.json  wall-5.json  wall-6.json
apps/ReactWebUI/public/: index.html
apps/ReactWebUI/src/: index.css  index.tsx  setupProxy.js
apps/TideConverter/: CMakeLists.txt  main.cpp
apps/TideForker/: CMakeLists.txt  main.cpp
apps/TideMaster/: CMakeLists.txt  main.cpp  tidemaster.desktop  tidemaster.icns
apps/TideWall/: CMakeLists.txt  main.cpp  tidewall.desktop  tidewall.icns
apps/Webbrowser/: CMakeLists.txt  Webbrowser.cpp  Webbrowser.h  main.cpp  resources.qrc
apps/Webbrowser/qml/: Webengine.qml
apps/Whiteboard/: CMakeLists.txt  Whiteboard.cpp  Whiteboard.h  main.cpp  resources.qrc
apps/Whiteboard/qml/: Whiteboard.qml  whiteboard.qml
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/cpp/core/: ActivityLoggerTests.cpp  BackgroundTests.cpp  CommandLineOptionsTests.cpp  ConfigurationTests.cpp  ContentControllerTests.cpp  ContentInteractionDelegateTests.cpp  ContentWindowControllerTests.cpp  ContentWindowTests.cpp  DataSourceFactoryTests.cpp  DeflectSerializationTests.cpp  DisplayGroupControllerTests.cpp  DisplayGroupTests.cpp  DockToolbarTests.cpp  DummyContent.h  DynamicTextureTests.cpp  FileReceiverTests.cpp  HardwareSwapGroupTests.cpp  JsonOptionsTests.cpp  JsonRpcTests.cpp  JsonSerializationTests.cpp  LauncherPlacerTests.cpp  LineLayoutTests.cpp  LocalBarrierTests.cpp  LocalPixelStreamerTests.cpp  LoggingUtilityTest.cpp  MultiScreenControllerTests.cpp  PixelStreamAssemblerTests.cpp  PixelStreamControllerTests.cpp  PixelStreamWindowManagerTests.cpp  QmlControlPanelTests.cpp  RESTCommandTests.cpp  ReceiveBufferTests.cpp  RestCommandTests.cpp  (+23 more)
tests/mock/: CMakeLists.txt  GlobalQtApp.h  MinimalGlobalQtApp.h  MinimalGlobalQtAppMPI.h  MockNetworkBarrier.h  MockScreenController.cpp  MockScreenController.h  MockTouchEvents.h  QGuiAppFixture.h  StandardScreenConfigs.h  glVersion.h  glxDisplay.cpp  glxDisplay.h  imageCompare.h
tests/perf/: CMakeLists.txt  tideBenchmarkMPI.cpp
tests/resources/: CMakeLists.txt  configuration.json  configuration.xml  configuration_default.xml  configuration_minimal.xml  configuration_stereo.xml  dynamictexture.pyr  legacy.dcx  select_test.htm  state_v0.dcx  state_v0.dcxpreview  state_v0_broken.dcx  state_v3.dcx  state_v3_noTitles.dcx  state_v4.dcx  webgl_interaction.html
tide/: CMakeLists.txt  config.h.in
tide/core/: CMakeLists.txt  CachedDataSource.cpp  CachedDataSource.h  CommandLineParameters.cpp  CommandLineParameters.h  CommandLineParser.cpp  CommandLineParser.h  Configuration.cpp  Configuration.h  Content.cpp  Content.h  ContentAction.cpp  ContentAction.h  ContentActionsModel.cpp  ContentActionsModel.h  ContentFactory.cpp  ContentFactory.h  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentType.cpp  ContentType.h  ContentWindow.cpp  ContentWindow.h  ContentWindowController.cpp  ContentWindowController.h  Coordinates.cpp  Coordinates.h  CountdownStatus.h  DataSource.h  DisplayGroup.cpp  DisplayGroup.h  DynamicTexture.cpp  DynamicTexture.h  DynamicTextureContent.cpp  DynamicTextureContent.h  FFMPEGFrame.cpp  FFMPEGFrame.h  FFMPEGMovie.cpp  FFMPEGPicture.cpp  FFMPEGPicture.h  (+92 more)
tide/master/: BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  CommandLineParameters.cpp  CommandLineParameters.h  ContentLoader.cpp  ContentLoader.h  ContentWindowListWidgetItem.cpp  ContentWindowListWidgetItem.h  DisplayGroupController.cpp  DisplayGroupController.h  DisplayGroupListWidget.cpp  DisplayGroupListWidget.h  DisplayGroupView.cpp  DisplayGroupView.h  FileCommandHandler.cpp  FileCommandHandler.h  FileInfoHelper.h  InactivityTimer.cpp  LoggingUtility.cpp  LoggingUtility.h  MasterApplication.cpp  MasterApplication.h  MasterConfiguration.cpp  MasterConfiguration.h  MasterDisplayGroupRenderer.cpp  MasterDisplayGroupRenderer.h  MasterSceneRenderer.cpp  MasterSceneRenderer.h  MasterSurfaceRenderer.cpp  MasterSurfaceRenderer.h  MasterToForkerChannel.cpp  MasterToForkerChannel.h  MasterWindow.cpp  MasterWindow.h  MultiScreenController.cpp  MultiScreenController.h  MultiTouchListener.cpp  MultiTouchListener.h  MultitouchArea.cpp  (+27 more)
tide/wall/: BackgroundRenderer.cpp  BackgroundRenderer.h  BasicSynchronizer.cpp  BasicSynchronizer.h  CMakeLists.txt  CachedDataSource.cpp  CachedDataSource.h  ContentSynchronizer.cpp  ContentSynchronizer.h  ContentWindowRenderer.cpp  ContentWindowRenderer.h  DataProvider.cpp  DataProvider.h  DataSource.h  DisplayGroupRenderer.cpp  DisplayGroupRenderer.h  DynamicTextureSynchronizer.cpp  DynamicTextureSynchronizer.h  ElapsedTimer.cpp  ElapsedTimer.h  FpsCounter.cpp  FpsCounter.h  HardwareSwapGroup.cpp  HardwareSwapGroup.h  ImagePyramidDataSource.cpp  ImagePyramidDataSource.h  ImagePyramidSynchronizer.cpp  ImagePyramidSynchronizer.h  ImageSource.cpp  ImageSource.h  ImageSynchronizer.cpp  ImageSynchronizer.h  LodSynchronizer.cpp  LodSynchronizer.h  LodTiler.cpp  LodTiler.h  LodTools.cpp  LodTools.h  MovieSynchronizer.cpp  MovieSynchronizer.h  (+86 more)
(+826 files in other folders)
